<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.appexmple.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SettingFragment" />
    </fragment>

    <fragment
        android:id="@+id/SettingFragment"
        android:name="com.example.appexmple.SettingFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_setting">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/HelpFragment"
        android:name="com.example.appexmple.HelpFragment"
        android:label="@string/help_fragment_label"
        tools:layout="@layout/fragment_help">

        <action
            android:id="@+id/action_HelpFragment_to_SettingFragment"
            app:destination="@id/SettingFragment" />
    </fragment>
</navigation>