<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <LinearLayout
        android:padding="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6">
            <LinearLayout
                android:id="@+id/open_server"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/openServerTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/btn_open_server"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/service_description" />
            </LinearLayout>

        </RelativeLayout>

        <!-- 支持的应用 -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_height="0dp"
            android:layout_weight="4">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/open_app_mooc"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true">
                    <ImageView
                        android:id="@+id/moocView"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center_horizontal"
                        app:srcCompat="@mipmap/moocxuetang" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_open_app"
                        android:layout_gravity="center_horizontal"></TextView>
                </LinearLayout>
            </RelativeLayout>

            <!-- 打开学习强国 -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/open_app_qiangguo"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true">
                    <ImageView
                        android:id="@+id/xuexiView"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center_horizontal"
                        app:srcCompat="@mipmap/xuexiqiangguo" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_open_xuexiqiangguo"
                        android:layout_gravity="center_horizontal"></TextView>
                </LinearLayout>
            </RelativeLayout>

<!--            <Button-->
<!--                android:id="@+id/button_first"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/next"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/open_app" />-->
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>